<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/circles"
        android:src="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="92dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/welcome_back"
        android:src="@drawable/people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="137dp"
        android:fontFamily="@font/poppins_500"
        android:lineHeight="27sp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="p" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2"
    android:layout_marginTop="47dp"
    android:layout_marginStart="31dp"
    android:layout_marginEnd="33dp"
    app:boxCornerRadiusTopEnd="30dp"
    app:boxCornerRadiusTopStart="30dp"
    app:boxCornerRadiusBottomEnd="30dp"
    app:boxCornerRadiusBottomStart="30dp"
    android:textColorHint="@color/black"
    app:boxBackgroundColor="@color/white"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:boxStrokeWidth="0dp"
    app:boxStrokeWidthFocused="0dp"
    >
    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:paddingStart="35dp"
        android:autofillHints="emailAddress"
    android:fontFamily="@font/poppins_400"
    android:hint="@string/enter_your_email"
    android:inputType="textEmailAddress"
    android:textSize="14sp"
    tools:targetApi="p"/>
    </com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="31dp"
    android:layout_marginEnd="33dp"
    app:boxCornerRadiusTopEnd="30dp"
    app:boxCornerRadiusTopStart="30dp"
    app:boxCornerRadiusBottomEnd="30dp"
    app:boxCornerRadiusBottomStart="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text1"
    app:boxBackgroundColor="@color/white"
    android:textColorHint="@color/black"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:boxStrokeWidth="0dp"
    app:boxStrokeWidthFocused="0dp"
    >
    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:paddingStart="35dp"
        android:fontFamily="@font/poppins_400"
    android:hint="@string/Confirm_password"
    android:inputType="textPassword"
    android:textSize="14sp"
    tools:targetApi="p" />
</com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="@font/poppins_700"
        android:gravity="center_horizontal|top"
        android:text="@string/fogot_pass"
        android:textColor="@color/yellow2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins_700"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="59dp"
        android:fontFamily="@font/poppins_700"
        android:gravity="center_horizontal|top"
        android:text="@string/don_t_have_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="59dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_700"
        android:text="@string/sing_up"
        android:textColor="@color/yellow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>